--- a/style.css
+++ b/style.css
@@ -68,9 +68,29 @@ img {
   margin-left: 30px;
 }
 
+/* SIDENAV */
+
 .sidenav {
   grid-area: sidenav;
+  background: #fafbfc;
+  padding: 30px;
 }
+.sidenav li a {
+  display: block;
+  margin: 0px auto 30px auto;
+  padding: 20px;
+  min-width: 60px;
+  max-width: 100px;
+  border-radius: 5px;
+  box-shadow: 5px 5px 15px 0px rgba(44, 44, 44, 0.15);
+  background: white;
+  transition: 0.1s ease-out;
+}
+
+.sidenav li a:hover {
+  background: #b07dfb;
+}
+
 .content {
   grid-area: content;
 }
