Wildbeast Responsivo Conteúdo

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ a {
 }
 img {
   display: block;
-  max-width: 100%;
+  width: 100%;
   border-radius: 5px;
 }
 
@@ -179,6 +179,12 @@ img {
   gap: 30px;
 }
 
+@media (max-width: 600px) {
+  .content {
+    grid-template-columns: auto;
+  }
+}
+
 .col-wide {
   grid-column: 1 / -1;
 }
@@ -306,6 +312,7 @@ P {
   padding: 30px;
   gap: 30px;
   background: #fafbfc;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 }
 
 /* FOOTER */
